--- a/estilos.css
+++ b/estilos.css
@@ -3,6 +3,10 @@ body{
     color: brown;
 }
 
+h1{
+    font-size: 5em;
+}
+
 p{
     font-family: Arial, Helvetica, sans-serif;
     background-color: bisque;
@@ -10,6 +14,9 @@ p{
     width: 40%;
     padding: 1%;
     text-align: center;
+    margin: 10px 30px 50px;
+    border-style: inset;
+    border-radius: 50px 30px 20px;
 }
 
 /*selector de id*/
