--- a/practica de iframe/estilos.css
+++ b/practica de iframe/estilos.css
@@ -6,16 +6,25 @@ h1{
     color: white;
     border-style: solid;
     border-color: beige;
+    text-align: center;
+    font-size: 5em;
 }
 
 p{
     color: white;
+    text-align: center;
+    font-size: 20px;
 }
 
 iframe{
     width: 500px;
     height: 300px;
     border: 5px;
-    border-style: double;
+    border-style: dashed;
     border-color: blue;
+}
+
+.grupo{
+    width: 300px;
+    border-color: yellow;
 }
