--- a/practica de Display y Grid/estilos.css
+++ b/practica de Display y Grid/estilos.css
@@ -1,24 +1,84 @@
 body {
-    background-color: violet;
+    background-color: whitesmoke;
     color: red;
 
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-gap: 10px;
-    grid-auto-rows: minmax(200px, auto);
+    grid-template-columns: repeat(6, 1fr);
+    grid-gap: 50px;
+    grid-auto-rows: minmax(100px, auto);
 }
 
-p{
-border: 3px solid red;
-}
-
-h5 {
-border: 3px solid red;
+p, h3, h5{
+border: 3px solid black;
+text-align: center;
 }
 
 
 #tipo1 {
-    grid-template-rows: 1 / 4;
+    grid-column: 1 / 3;
     grid-row: 1;
     background-color: blueviolet;
+    color: white;
+}
+
+
+#tipo2 {
+    grid-column: 5 / 3;
+    grid-row: 2;
+    background-color: aqua;
+    color: white;
+}
+
+
+#tipo3 {
+    
+    grid-row: 1;
+    background-color: red;
+    color: white;
+}
+
+
+#tipo4{
+  
+    grid-row: 2;
+    background-color: yellow; 
+    color: white;
+}
+
+
+#tipo5{
+    grid-row: 1;
+    background-color:  rgb(60, 193, 233);
+    color:white
+}
+
+#tipo6{
+ grid-row: 2;
+ background-color: rgb(255, 115, 0);
+ color: white;
+}
+
+#tipo7{
+ 
+ grid-row: 1;
+ background-color: salmon;
+ color: white;
+}
+
+
+h5{
+ grid-column: 1 / 2;
+ grid-row: 2;
+ background-color: rgb(103, 228, 54);
+}
+
+h3{
+ grid-column: 6 ;
+ grid-row: 2;
+ background-color: rgb(167, 163, 163);
+}
+
+video{
+    border-style: dashed;
+    border-color: brown;
 }
