--- a/animacion CSS/estilos.css
+++ b/animacion CSS/estilos.css
@@ -11,7 +11,7 @@ body{
     border: 2px solid;
     border-color: blueviolet;
     padding: 4px;
-    animation: animacion 2s infinite;
+    animation: animacion 4s infinite;
 }
 
 @keyframes animacion {
@@ -19,9 +19,14 @@ body{
       transform: translatex(100px) ;
     }
 
-    12%{
+    15%{
         background-color: royalblue;
         border-color: violet;
+    }
+
+    20%{
+        background-color: azure;
+        border-color: rgb(206, 96, 96);
     }
 }
 
@@ -31,7 +36,7 @@ body{
     border: 4px dashed;
     border-color: red;
     padding: 10px;
-    animation: estilo 2s infinite;
+    animation: estilo 1s infinite;
 }
 
 @keyframes estilo {
@@ -68,6 +73,38 @@ body{
 
 @keyframes beta {
     0%{
+        transform: scale(0,5);
+    }
+}
+
+#parrafo-5{
+    color: fuchsia;
+    background-color: goldenrod;
+    border: 25px dotted;
+    border-color: darkred;
+    padding: 30px;
+    animation: gama 4s infinite;
+}
+
+@keyframes gama {
+    5%{
+        transform: rotation(10);
+    }
+}
+
+#parrafo-6{
+    color: silver;
+    background-color: olivedrab;
+    border: 10px solid;
+    border-color: sandybrown;
+    padding: 15px;
+    animation-name: ultra;
+    animation-duration: 5s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes ultra{
+    50%{
         transform: scale(0,5);
     }
 }
